# pauli_tracker

./: .gitignore  Cargo.toml  README.md
c_api/: makefile  pauli_tracker.h
c_api/builder/gen_bind/: Cargo.toml
c_api/builder/gen_bind/src/: lib.rs
c_api/builder/impl_api/src/: lib.rs
c_api/example_usage/: makefile
c_api/example_usage/src/: main.cpp
c_api/generate_bindings/src/: main.rs
c_api/pauli_tracker_clib/: Cargo.toml
c_api/pauli_tracker_clib/src/: boolean_vector.rs  collection.rs  pauli.rs
c_api/pauli_tracker_clib/src/pauli/: enumlike.rs  tuple.rs
c_api/pauli_tracker_clib/src/tracker/: frames.rs  live.rs
c_api/pauli_tracker_lib/: Cargo.toml
c_api/pauli_tracker_lib/src/: cpp_bool_vec.rs  frames.rs  lib.rs  live.rs
docs/: c.md
foreign_api/c/: Cargo.toml
foreign_api/c/src/: lib.rs
foreign_api/examples/c/include/c/: pauli_tracker.h
quick_example/app/: .ccls  live.json  main.cpp  makefile  storage.json
quick_example/app/include/app/: boolean_vector.hpp  collection.hpp
quick_example/app/src/: boolean_vector.cpp  main.cpp
quick_example/tracker/: Cargo.toml
quick_example/tracker/proc/: Cargo.toml
quick_example/tracker/src/: cpp_bool_vec.rs  frames.rs  lib.rs  live.rs
test_principle/: README.md
test_principle/examples/c/src/: main.c
