[package]
name = "pauli_tracker_lib"
version = "0.1.0"

edition = "2021"
rust-version = "1.71.0" # needed "C-unwind"

[lib]
name = "pauli_tracker"
crate-type = ["cdylib", "staticlib"]

[dependencies]
impl_api = { version = "0.1.0", path = "../builder/impl_api" }
serde = "1.0.173"
serde_json = "1.0.103"
rustc-hash = "1.0.1"
bit-vec = "0.6.2"

[dependencies.pauli_tracker]
version = "0.3.0-alpha.4"
git = "https://github.com/taeruh/pauli_tracker"
rev = "edcdb34"
features = ["serde", "bit-vec"]
