[package]
name = "c_pauli_tracker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
bit-vec = "0.6.3"
# if we need to be more up to date
pauli_tracker = { git = "https://github.com/taeruh/pauli_tracker", rev = "fd19ab2", features = ["bit-vec"] }
# pauli_tracker = "0.1.0"
