[package]
name = "tracker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
proc = { version = "0.1.0", path = "./proc" }
serde = "1.0.173"
serde_json = "1.0.103"

[dependencies.pauli_tracker]
version = "0.3.0-alpha.3"
# path = "../../../pauli_tracker"
git = "https://github.com/taeruh/pauli_tracker"
rev = "7e1dbed66322ea89ec24eb0f4105931e0cee8d77"
features = ["serde"]
# features = ["bitvec"]
